--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     	Recognize to <span class=redColor> our products</span> and choose any of them, just click at the product that you want to get it immediately, we will provide you the best quality of meat, try it to enjoy with us.
     </p>
     <div>
-    	<img src="images/beef meal.jpg" width=250px alt="picture of a beef meal" />
-        <img src="images/beef meal.jpg" width=250px alt="picture of a beef meal" /> 
+    	<img src="beef meal.jpg" width=250px alt="picture of a beef meal" />
+        <img src="beef meal.jpg" width=250px alt="picture of a beef meal" /> 
     </div>
     	
     </div>
     <div id="footer">
-        <img src="images/beef meal.jpg" width=250px alt="picture of a beef meal" />
+        <img src="beef meal.jpg" width=250px alt="picture of a beef meal" />
     	<p class="text_para">
     		this is footer
     	</p>
