--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="wrap"> 
        <div id="nheader">
-           <h1>HOW TO WRITE HTML5</h1>
+           <h1>WELCOME TO OUR RESTAURANT</h1>
     </div>
     <div id="npara">
     	<p class="text_para">
@@ -23,9 +23,9 @@
     	
     </div>
     <div id="footer">
-        <img src="beef meal.jpg" width=250px alt="picture of a beef meal" />
+
     	<p class="text_para">
-    		this is footer
+    		copy right
     	</p>
     </div>
       </div>
